syntax = "proto3";
package wire;

import "event.proto";

service Node {
    rpc SyncEvents(KnownEvents) returns (KnownEvents) {}
    rpc GetEvent(EventRequest) returns (Event) {}
    rpc GetPeerInfo(PeerRequest) returns (PeerInfo) {}
}


message KnownEvents {
    map<string,uint64> Lasts = 1;
}

message EventRequest {
    string PeerID = 1;
    uint64 Index = 2;
}

message PeerRequest {
    string PeerID = 1;
}

message PeerInfo {
    string PeerID = 1;
    bytes PubKey = 2;
    string NetAddr = 3;
}
