syntax = "proto3";
package wire;

message PeersID {
    repeated string IDs = 1;
}